fix(css): Add scrollbar to settings container
Fixes flicker when navigating from view with overflow to a view with
no overflow.

--- a/src/sentry/static/sentry/less/layout.less
+++ b/src/sentry/static/sentry/less/layout.less
@@ -20,6 +20,7 @@ body {
   background-repeat: repeat-y;
 
   &.settings {
+    overflow-y: scroll;
     background-image: none;
     background-color: #FCFCFC;
     padding: 0 0 40px;
